--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="po-header">
              <div class="po-header__logo-container">
                  <a class="po-logo-container__link" href="#">
-                    <img  class="po-logo-container__ link__img"   src="" alt="">
+                    <img  class="po-logo-container__ link__img"   src="./assets/image/Logologo.png" alt="logo">
                  </a>
              </div>
              <nav class="po-header__nav-container"></nav>
